--- a/client/src/components/EngineerView/AssignedProjects/Reports/NewReport.css
+++ b/client/src/components/EngineerView/AssignedProjects/Reports/NewReport.css
@@ -8,7 +8,7 @@
 .custom_form{
     border: 1px solid #fff;
     /* margin: 40px; */
-    /* height: 550px; */
+    height: 550px;
     
 
 }
@@ -128,33 +128,3 @@
     display: flex;
     justify-content: flex-end;
 }
-.custom-debounce-container{
-    display: grid;
-    grid-template-columns: 2fr 1fr;
-  }
-  .createProjectFolderBoxBorder{
-    width: 100%;
-  }
-  .parentSearchResult{
-    position: relative;
-  }
-
-  .searchResults{
-    position: absolute;
-    top: 2rem;
-    background-color: white;
-    border: 1.5px solid #007D99;
-    z-index: 9;
-    width: 100%;
-  }
-  .searchItem{
-    border-bottom: 1px solid grey ;
-    color: black;
-    padding: 0.4rem;
-  }
-
-  .searchItem:hover{
-
-    color: blue;
-    cursor:pointer
-  }
