--- a/client/src/components/EngineerView/AssignedProjects/Reports/NewReport.css
+++ b/client/src/components/EngineerView/AssignedProjects/Reports/NewReport.css
@@ -61,7 +61,7 @@
 .upload_label{
     /* position:static; */
     width: auto;
-    height: 100px;
+    /* height: 100px; */
     font-size: 0.85rem;
     font: bold;
     border: 1px solid skyblue;
@@ -157,4 +157,7 @@
 
     color: blue;
     cursor:pointer
+  }
+  .css-b62m3t-container{
+    width: 200px;
   }
